--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: 0.21.0
+  awesome_dialog: ^2.1.1
 
 dev_dependencies:
   flutter_test:
