--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: 0.21.0
   awesome_dialog: ^2.1.1
+  firebase_core: ^1.10.6
 
 dev_dependencies:
   flutter_test:
