--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_svg: 0.21.0
   awesome_dialog: ^2.1.1
   firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
 
 dev_dependencies:
   flutter_test:
