--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   awesome_dialog: ^2.1.1
   firebase_core: ^1.10.6
   cloud_firestore: ^3.1.5
+  flutter_redux: ^0.8.2
+  redux: ^5.0.0
 
 dev_dependencies:
   flutter_test:
