--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^3.1.5
   flutter_redux: ^0.8.2
   redux: ^5.0.0
+  rive: ^0.8.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
